--- a/index.html
+++ b/index.html
@@ -4,24 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Railway</title>
 
   <!-- Data Table v-1.13.4 -->
-  <link rel="stylesheet" href="./library/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="./library/css/jquery.dataTables.min.css" />
 
   <!-- Bootstrap v-5 -->
-  <link rel="stylesheet" href="./library/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./library/css/bootstrap.min.css" />
 
   <!-- Fonts -->
-  <link rel="stylesheet" href="./library/fonts/font.css">
+  <link rel="stylesheet" href="./library/fonts/font.css" />
 
-  <!-- jQuery Date library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pickadate.js/3.6.4/themes/default.css"
-    integrity="sha512-x9ZSPqJJfUhtPuo+fw6331wHeC3vhDpNI3Iu4KC05zJrxx7MWYewaDaASGxAUgWyrwU50oFn6Xk0CrQnTSuoOA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pickadate.js/3.6.4/themes/default.date.css"
-    integrity="sha512-Ix4qjGzOeoBtc8sdu1i79G1Gxy6azm56P4z+KFl+po7kOtlKhYSJdquftaI4hj1USIahQuZq5xpg7WgRykDJPA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- jQuery Pickadate library -->
+  <link rel="stylesheet" href="./library/css/pickadate_default.css" />
+  <link rel="stylesheet" href="./library/css/pickadate_default_date.css">
 
   <!-- Css -->
   <link rel="stylesheet" href="./css/style.css">
@@ -414,6 +410,9 @@
 
 
   </div>
+
+
+  <!-- Qo'shimcha filter modal -->
   <div class="filter_modal">
     <div class="modal_box">
       <div class="close_btn">
@@ -421,8 +420,6 @@
       </div>
     </div>
   </div>
-
-
 
 
 
@@ -438,12 +435,8 @@
   <script src="./library/js/bootstrap.bundle.min.js"></script>
 
   <!-- jQuery Date library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pickadate.js/3.6.4/picker.js"
-    integrity="sha512-VQa5Pmc87GQrifaBaI+ejCQBHkca6yhwKH+iFihubE4Mf3NSj0jVN3cppGHPlFSa2MRmAD7xwuZ8fr9DOHUsgw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pickadate.js/3.6.4/picker.date.js"
-    integrity="sha512-4UAypxd5+OVqRf2SeJTnkd+W47HoLnpHjwannVikXGsgJxH2Hl+SBDM9UYyi+3hpNc16aaGeOu5RvesbSwlRlA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="./library/js/pickadate.js"></script>
+  <script src="./library/js/pickadate_date.js"></script>
 
   <!-- JS -->
   <script src="./js/script.js"></script>
