--- a/index.html
+++ b/index.html
@@ -418,6 +418,50 @@
       <div class="close_btn">
         <img src="./assets/icons/close-circle.svg" alt="Close">
       </div>
+      <div class="select_wrapper">
+        <div class="selects">
+          <label class="label" for="select">Stansiya</label>
+          <select id="select" class="filter_select">
+            <option value="o'zbekiston">o'zbekiston</option>
+            <option value="o'zbekiston">tojikiston</option>
+          </select>
+        </div>
+        <div class="selects">
+          <label class="label" for="select">Stansiya</label>
+          <select id="select" class="filter_select">
+            <option value="o'zbekiston">o'zbekiston</option>
+            <option value="o'zbekiston">tojikiston</option>
+          </select>
+        </div>
+        <div class="selects">
+          <label class="label" for="select">Stansiya</label>
+          <select id="select" class="filter_select">
+            <option value="o'zbekiston">o'zbekiston</option>
+            <option value="o'zbekiston">tojikiston</option>
+          </select>
+        </div>
+        <div class="selects">
+          <label class="label" for="select">Stansiya</label>
+          <select id="select" class="filter_select">
+            <option value="o'zbekiston">o'zbekiston</option>
+            <option value="o'zbekiston">tojikiston</option>
+          </select>
+        </div>
+        <div class="selects">
+          <label class="label" for="select">Stansiya</label>
+          <select id="select" class="filter_select">
+            <option value="o'zbekiston">o'zbekiston</option>
+            <option value="o'zbekiston">tojikiston</option>
+          </select>
+        </div>
+        <div class="selects">
+          <label class="label" for="select">Stansiya</label>
+          <select id="select" class="filter_select">
+            <option value="o'zbekiston">o'zbekiston</option>
+            <option value="o'zbekiston">tojikiston</option>
+          </select>
+        </div>
+      </div>
     </div>
   </div>
 
