--- a/index.html
+++ b/index.html
@@ -462,6 +462,12 @@
           </select>
         </div>
       </div>
+      <div class="filter_footer">
+        <div class="btn_box">
+          <button class="clearBtn">- Clear</button>
+          <button class="closeBtn">Click me</button>
+        </div>
+      </div>
     </div>
   </div>
 
