--- a/index.html
+++ b/index.html
@@ -418,54 +418,62 @@
       <div class="close_btn">
         <img src="./assets/icons/close-circle.svg" alt="Close">
       </div>
+
       <div class="select_wrapper">
         <div class="selects">
-          <label class="label" for="select">Stansiya</label>
-          <select id="select" class="filter_select">
-            <option value="o'zbekiston">o'zbekiston</option>
-            <option value="o'zbekiston">tojikiston</option>
+          <label class="label">Stansiya</label>
+          <select class="filter_select">
+            <option value="stansiya_tanlang">Stansiya tanlang</option>
+            <option value="chuqursoy">Chuqursoy</option>
+            <option value="hamza">Hamza</option>
           </select>
         </div>
         <div class="selects">
-          <label class="label" for="select">Stansiya</label>
-          <select id="select" class="filter_select">
-            <option value="o'zbekiston">o'zbekiston</option>
-            <option value="o'zbekiston">tojikiston</option>
+          <label class="label">Stansiya</label>
+          <select class="filter_select">
+            <option value="stansiya_tanlang">Stansiya tanlang</option>
+            <option value="chuqursoy">Chuqursoy</option>
+            <option value="hamza">Hamza</option>
           </select>
         </div>
         <div class="selects">
-          <label class="label" for="select">Stansiya</label>
-          <select id="select" class="filter_select">
-            <option value="o'zbekiston">o'zbekiston</option>
-            <option value="o'zbekiston">tojikiston</option>
+          <label class="label">Stansiya</label>
+          <select class="filter_select">
+            <option value="stansiya_tanlang">Stansiya tanlang</option>
+            <option value="chuqursoy">Chuqursoy</option>
+            <option value="hamza">Hamza</option>
           </select>
         </div>
         <div class="selects">
-          <label class="label" for="select">Stansiya</label>
-          <select id="select" class="filter_select">
-            <option value="o'zbekiston">o'zbekiston</option>
-            <option value="o'zbekiston">tojikiston</option>
+          <label class="label">Stansiya</label>
+          <select class="filter_select">
+            <option value="stansiya_tanlang">Stansiya tanlang</option>
+            <option value="chuqursoy">Chuqursoy</option>
+            <option value="hamza">Hamza</option>
           </select>
         </div>
         <div class="selects">
-          <label class="label" for="select">Stansiya</label>
-          <select id="select" class="filter_select">
-            <option value="o'zbekiston">o'zbekiston</option>
-            <option value="o'zbekiston">tojikiston</option>
+          <label class="label">Stansiya</label>
+          <select class="filter_select">
+            <option value="stansiya_tanlang">Stansiya tanlang</option>
+            <option value="chuqursoy">Chuqursoy</option>
+            <option value="hamza">Hamza</option>
           </select>
         </div>
         <div class="selects">
-          <label class="label" for="select">Stansiya</label>
-          <select id="select" class="filter_select">
-            <option value="o'zbekiston">o'zbekiston</option>
-            <option value="o'zbekiston">tojikiston</option>
+          <label class="label">Stansiya</label>
+          <select class="filter_select">
+            <option value="stansiya_tanlang">Stansiya tanlang</option>
+            <option value="chuqursoy">Chuqursoy</option>
+            <option value="hamza">Hamza</option>
           </select>
         </div>
       </div>
+
       <div class="filter_footer">
         <div class="btn_box">
-          <button class="clearBtn">- Clear</button>
-          <button class="closeBtn">Click me</button>
+          <button class="clearBtn"><img src="./assets/icons/minus.svg" alt="minus"> Удалить</button>
+          <button class="getSubmit">Перевозки</button>
         </div>
       </div>
     </div>
