--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="userData">
         <div class="userCollapse d-flex align-items-center gap-3 position-relative" data-bs-toggle="collapse"
           href="#userDataCollapse" role="button" aria-expanded="false" aria-controls="userDataCollapse">
-          <img class="position-absolute img" src="./assets/imgs/admin_img.jpg" alt="">
+          <img class="position-absolute img" src="./assets/imgs/admin_img.png" alt="">
           <ul class="navbar-nav ms-4 userProfileImg">
             <li class="nav-item d-flex align-items-center">
               <a class="nav-link userImg rounded-circle bg-white" href="#"></a>
