--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
       <div class="filter_footer">
         <div class="btn_box">
           <button class="clearBtn"><img src="./assets/icons/minus.svg" alt="minus"> Удалить</button>
-          <button class="getSubmit">Перевозки</button>
+          <button class="getSubmit"><img src="./assets/icons/plus.svg" alt="plus"> Перевозки</button>
         </div>
       </div>
     </div>
